# hello-ch32v103

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  README.vscode.md  cmake-variants.yaml  dbgser.c  dbgser.h  eeprom.c  eeprom.h  gcc-riscv-none-elf.cmake  hello-ch32v103.launch  led.c  led.h  main.c  syscalls.c  syscalls.h
.devcontainer/: devcontainer.json
Controller/: ch32v10x_conf.h  ch32v10x_it.c  ch32v10x_it.h  linker_script_ch32v103r8.ld  startup_ch32v103r8.S  system_ch32v10x.c  system_ch32v10x.h
Controller/Core/: core_riscv.h
Controller/Peripheral/src/: ch32v10x_pwr.c  ch32v10x_usb.c  ch32v10x_usb_host.c
hw_layer/: hw_adc.c  hw_adc.h  hw_gpio.c  hw_gpio.h  hw_i2c2.c  hw_i2c2.h  hw_init.c  hw_init.h  hw_iodefs.h  hw_stk.c  hw_stk.h  hw_tim3.c  hw_tim3.h  hw_usart1.c  hw_usart1.h
